// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputRadioGroup props should match snapshot 1`] = `
<InputRadioGroup
  alignment="horizontal"
  breakpoint="md"
  className="class"
  disabled={true}
  errorMessage="error"
  hint="hint"
  id="id"
  name="name"
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "label": "label",
        "value": "value",
      },
      Object {
        "label": "one",
        "value": "1",
      },
    ]
  }
  value="value"
>
  <styled.div
    className="class"
  >
    <div
      className="class sc-htoDjs gQgvQJ"
    >
      <Hint
        hasError={true}
      >
        <styled.div
          hasError={true}
          theme={
            Object {
              "border": Object {
                "radius": Object {
                  "edge": "2px",
                  "round": "100px",
                },
                "size": "2px",
              },
              "breakpoint": Object {
                "lg": "992px",
                "md": "768px",
                "sm": "576px",
                "xl": "1200px",
                "xs": "0px",
              },
              "color": Object {
                "background": "#ffffff",
                "border": "#2fa4e7",
                "checked": "#2fa4e7",
                "danger": "#c71c22",
                "default": "#2fa4e7",
                "disabled": "#acacac",
                "error": "#c71c22",
                "focus": "#54b4eb",
                "font": "#333333",
                "hover": "#178acc",
                "info": "#04519b",
                "primary": "#2fa4e7",
                "secondary": "#e9ecef",
                "success": "#73a839",
                "tertiary": "#343a40",
                "warning": "#dd5600",
              },
              "font": Object {
                "size": Object {
                  "default": "1.8rem",
                  "h1": "3.8rem",
                  "h2": "3.1rem",
                  "h3": "2.6rem",
                  "h4": "2.3rem",
                  "h5": "2.2rem",
                  "h6": "2.1rem",
                },
                "weight": Object {
                  "default": 100,
                },
              },
            }
          }
        >
          <div
            className="sc-bwzfXH gjbaDJ"
          >
            hint
          </div>
        </styled.div>
      </Hint>
      <Fieldset
        aria-describedby="id-error"
        id="id-fieldset"
      >
        <styled.fieldset
          id="id-fieldset"
        >
          <fieldset
            className="sc-bdVaJa bDWFJH"
            id="id-fieldset"
          >
            <styled.div
              alignment="horizontal"
              breakpoint="md"
              theme={
                Object {
                  "border": Object {
                    "radius": Object {
                      "edge": "2px",
                      "round": "100px",
                    },
                    "size": "2px",
                  },
                  "breakpoint": Object {
                    "lg": "992px",
                    "md": "768px",
                    "sm": "576px",
                    "xl": "1200px",
                    "xs": "0px",
                  },
                  "color": Object {
                    "background": "#ffffff",
                    "border": "#2fa4e7",
                    "checked": "#2fa4e7",
                    "danger": "#c71c22",
                    "default": "#2fa4e7",
                    "disabled": "#acacac",
                    "error": "#c71c22",
                    "focus": "#54b4eb",
                    "font": "#333333",
                    "hover": "#178acc",
                    "info": "#04519b",
                    "primary": "#2fa4e7",
                    "secondary": "#e9ecef",
                    "success": "#73a839",
                    "tertiary": "#343a40",
                    "warning": "#dd5600",
                  },
                  "font": Object {
                    "size": Object {
                      "default": "1.8rem",
                      "h1": "3.8rem",
                      "h2": "3.1rem",
                      "h3": "2.6rem",
                      "h4": "2.3rem",
                      "h5": "2.2rem",
                      "h6": "2.1rem",
                    },
                    "weight": Object {
                      "default": 100,
                    },
                  },
                }
              }
            >
              <div
                className="sc-dnqmqq ROuBp"
              >
                <styled.div
                  key="0"
                >
                  <div
                    className="sc-bZQynM daLRsN"
                  >
                    <styled.input
                      aria-invalid={true}
                      checked={true}
                      disabled={true}
                      hasError={true}
                      id="id-0"
                      innerRef={[Function]}
                      name="name"
                      onChange={[Function]}
                      theme={
                        Object {
                          "border": Object {
                            "radius": Object {
                              "edge": "2px",
                              "round": "100px",
                            },
                            "size": "2px",
                          },
                          "breakpoint": Object {
                            "lg": "992px",
                            "md": "768px",
                            "sm": "576px",
                            "xl": "1200px",
                            "xs": "0px",
                          },
                          "color": Object {
                            "background": "#ffffff",
                            "border": "#2fa4e7",
                            "checked": "#2fa4e7",
                            "danger": "#c71c22",
                            "default": "#2fa4e7",
                            "disabled": "#acacac",
                            "error": "#c71c22",
                            "focus": "#54b4eb",
                            "font": "#333333",
                            "hover": "#178acc",
                            "info": "#04519b",
                            "primary": "#2fa4e7",
                            "secondary": "#e9ecef",
                            "success": "#73a839",
                            "tertiary": "#343a40",
                            "warning": "#dd5600",
                          },
                          "font": Object {
                            "size": Object {
                              "default": "1.8rem",
                              "h1": "3.8rem",
                              "h2": "3.1rem",
                              "h3": "2.6rem",
                              "h4": "2.3rem",
                              "h5": "2.2rem",
                              "h6": "2.1rem",
                            },
                            "weight": Object {
                              "default": 100,
                            },
                          },
                        }
                      }
                      type="radio"
                      value="value"
                    >
                      <input
                        aria-invalid={true}
                        checked={true}
                        className="sc-EHOje cRfBHc"
                        disabled={true}
                        id="id-0"
                        name="name"
                        onChange={[Function]}
                        type="radio"
                        value="value"
                      />
                    </styled.input>
                    <Label
                      hasError={true}
                      htmlFor="id-0"
                      type="radio"
                    >
                      <styled.label
                        hasError={true}
                        htmlFor="id-0"
                        theme={
                          Object {
                            "border": Object {
                              "radius": Object {
                                "edge": "2px",
                                "round": "100px",
                              },
                              "size": "2px",
                            },
                            "breakpoint": Object {
                              "lg": "992px",
                              "md": "768px",
                              "sm": "576px",
                              "xl": "1200px",
                              "xs": "0px",
                            },
                            "color": Object {
                              "background": "#ffffff",
                              "border": "#2fa4e7",
                              "checked": "#2fa4e7",
                              "danger": "#c71c22",
                              "default": "#2fa4e7",
                              "disabled": "#acacac",
                              "error": "#c71c22",
                              "focus": "#54b4eb",
                              "font": "#333333",
                              "hover": "#178acc",
                              "info": "#04519b",
                              "primary": "#2fa4e7",
                              "secondary": "#e9ecef",
                              "success": "#73a839",
                              "tertiary": "#343a40",
                              "warning": "#dd5600",
                            },
                            "font": Object {
                              "size": Object {
                                "default": "1.8rem",
                                "h1": "3.8rem",
                                "h2": "3.1rem",
                                "h3": "2.6rem",
                                "h4": "2.3rem",
                                "h5": "2.2rem",
                                "h6": "2.1rem",
                              },
                              "weight": Object {
                                "default": 100,
                              },
                            },
                          }
                        }
                        type="radio"
                      >
                        <label
                          className="sc-ifAKCX jEkptv"
                          htmlFor="id-0"
                          type="radio"
                        >
                          label
                        </label>
                      </styled.label>
                    </Label>
                  </div>
                </styled.div>
                <styled.div
                  key="1"
                >
                  <div
                    className="sc-bZQynM daLRsN"
                  >
                    <styled.input
                      aria-invalid={true}
                      checked={false}
                      disabled={true}
                      hasError={true}
                      id="id-1"
                      innerRef={[Function]}
                      name="name"
                      onChange={[Function]}
                      theme={
                        Object {
                          "border": Object {
                            "radius": Object {
                              "edge": "2px",
                              "round": "100px",
                            },
                            "size": "2px",
                          },
                          "breakpoint": Object {
                            "lg": "992px",
                            "md": "768px",
                            "sm": "576px",
                            "xl": "1200px",
                            "xs": "0px",
                          },
                          "color": Object {
                            "background": "#ffffff",
                            "border": "#2fa4e7",
                            "checked": "#2fa4e7",
                            "danger": "#c71c22",
                            "default": "#2fa4e7",
                            "disabled": "#acacac",
                            "error": "#c71c22",
                            "focus": "#54b4eb",
                            "font": "#333333",
                            "hover": "#178acc",
                            "info": "#04519b",
                            "primary": "#2fa4e7",
                            "secondary": "#e9ecef",
                            "success": "#73a839",
                            "tertiary": "#343a40",
                            "warning": "#dd5600",
                          },
                          "font": Object {
                            "size": Object {
                              "default": "1.8rem",
                              "h1": "3.8rem",
                              "h2": "3.1rem",
                              "h3": "2.6rem",
                              "h4": "2.3rem",
                              "h5": "2.2rem",
                              "h6": "2.1rem",
                            },
                            "weight": Object {
                              "default": 100,
                            },
                          },
                        }
                      }
                      type="radio"
                      value="1"
                    >
                      <input
                        aria-invalid={true}
                        checked={false}
                        className="sc-EHOje cRfBHc"
                        disabled={true}
                        id="id-1"
                        name="name"
                        onChange={[Function]}
                        type="radio"
                        value="1"
                      />
                    </styled.input>
                    <Label
                      hasError={true}
                      htmlFor="id-1"
                      type="radio"
                    >
                      <styled.label
                        hasError={true}
                        htmlFor="id-1"
                        theme={
                          Object {
                            "border": Object {
                              "radius": Object {
                                "edge": "2px",
                                "round": "100px",
                              },
                              "size": "2px",
                            },
                            "breakpoint": Object {
                              "lg": "992px",
                              "md": "768px",
                              "sm": "576px",
                              "xl": "1200px",
                              "xs": "0px",
                            },
                            "color": Object {
                              "background": "#ffffff",
                              "border": "#2fa4e7",
                              "checked": "#2fa4e7",
                              "danger": "#c71c22",
                              "default": "#2fa4e7",
                              "disabled": "#acacac",
                              "error": "#c71c22",
                              "focus": "#54b4eb",
                              "font": "#333333",
                              "hover": "#178acc",
                              "info": "#04519b",
                              "primary": "#2fa4e7",
                              "secondary": "#e9ecef",
                              "success": "#73a839",
                              "tertiary": "#343a40",
                              "warning": "#dd5600",
                            },
                            "font": Object {
                              "size": Object {
                                "default": "1.8rem",
                                "h1": "3.8rem",
                                "h2": "3.1rem",
                                "h3": "2.6rem",
                                "h4": "2.3rem",
                                "h5": "2.2rem",
                                "h6": "2.1rem",
                              },
                              "weight": Object {
                                "default": 100,
                              },
                            },
                          }
                        }
                        type="radio"
                      >
                        <label
                          className="sc-ifAKCX jEkptv"
                          htmlFor="id-1"
                          type="radio"
                        >
                          one
                        </label>
                      </styled.label>
                    </Label>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </fieldset>
        </styled.fieldset>
      </Fieldset>
      <Error
        id="id-error"
      >
        <styled.div
          id="id-error-error"
          theme={
            Object {
              "border": Object {
                "radius": Object {
                  "edge": "2px",
                  "round": "100px",
                },
                "size": "2px",
              },
              "breakpoint": Object {
                "lg": "992px",
                "md": "768px",
                "sm": "576px",
                "xl": "1200px",
                "xs": "0px",
              },
              "color": Object {
                "background": "#ffffff",
                "border": "#2fa4e7",
                "checked": "#2fa4e7",
                "danger": "#c71c22",
                "default": "#2fa4e7",
                "disabled": "#acacac",
                "error": "#c71c22",
                "focus": "#54b4eb",
                "font": "#333333",
                "hover": "#178acc",
                "info": "#04519b",
                "primary": "#2fa4e7",
                "secondary": "#e9ecef",
                "success": "#73a839",
                "tertiary": "#343a40",
                "warning": "#dd5600",
              },
              "font": Object {
                "size": Object {
                  "default": "1.8rem",
                  "h1": "3.8rem",
                  "h2": "3.1rem",
                  "h3": "2.6rem",
                  "h4": "2.3rem",
                  "h5": "2.2rem",
                  "h6": "2.1rem",
                },
                "weight": Object {
                  "default": 100,
                },
              },
            }
          }
        >
          <div
            className="sc-htpNat hYJuoM"
            id="id-error-error"
          >
            error
          </div>
        </styled.div>
      </Error>
    </div>
  </styled.div>
</InputRadioGroup>
`;

exports[`InputRadioGroup snapshot basic 1`] = `
<InputRadioGroup
  id="id"
  name="name"
  options={
    Array [
      Object {
        "label": "label",
        "value": "value",
      },
      Object {
        "label": "one",
        "value": "1",
      },
    ]
  }
>
  <styled.div>
    <div
      className="sc-htoDjs gQgvQJ"
    >
      <Fieldset
        aria-describedby="id-error"
        id="id-fieldset"
      >
        <styled.fieldset
          id="id-fieldset"
        >
          <fieldset
            className="sc-bdVaJa bDWFJH"
            id="id-fieldset"
          >
            <styled.div
              alignment="horizontal"
              theme={
                Object {
                  "border": Object {
                    "radius": Object {
                      "edge": "2px",
                      "round": "100px",
                    },
                    "size": "2px",
                  },
                  "breakpoint": Object {
                    "lg": "992px",
                    "md": "768px",
                    "sm": "576px",
                    "xl": "1200px",
                    "xs": "0px",
                  },
                  "color": Object {
                    "background": "#ffffff",
                    "border": "#2fa4e7",
                    "checked": "#2fa4e7",
                    "danger": "#c71c22",
                    "default": "#2fa4e7",
                    "disabled": "#acacac",
                    "error": "#c71c22",
                    "focus": "#54b4eb",
                    "font": "#333333",
                    "hover": "#178acc",
                    "info": "#04519b",
                    "primary": "#2fa4e7",
                    "secondary": "#e9ecef",
                    "success": "#73a839",
                    "tertiary": "#343a40",
                    "warning": "#dd5600",
                  },
                  "font": Object {
                    "size": Object {
                      "default": "1.8rem",
                      "h1": "3.8rem",
                      "h2": "3.1rem",
                      "h3": "2.6rem",
                      "h4": "2.3rem",
                      "h5": "2.2rem",
                      "h6": "2.1rem",
                    },
                    "weight": Object {
                      "default": 100,
                    },
                  },
                }
              }
            >
              <div
                className="sc-dnqmqq kdnsFs"
              >
                <styled.div
                  key="0"
                >
                  <div
                    className="sc-bZQynM daLRsN"
                  >
                    <styled.input
                      aria-invalid={false}
                      checked={false}
                      hasError={false}
                      id="id-0"
                      innerRef={[Function]}
                      name="name"
                      onChange={[Function]}
                      theme={
                        Object {
                          "border": Object {
                            "radius": Object {
                              "edge": "2px",
                              "round": "100px",
                            },
                            "size": "2px",
                          },
                          "breakpoint": Object {
                            "lg": "992px",
                            "md": "768px",
                            "sm": "576px",
                            "xl": "1200px",
                            "xs": "0px",
                          },
                          "color": Object {
                            "background": "#ffffff",
                            "border": "#2fa4e7",
                            "checked": "#2fa4e7",
                            "danger": "#c71c22",
                            "default": "#2fa4e7",
                            "disabled": "#acacac",
                            "error": "#c71c22",
                            "focus": "#54b4eb",
                            "font": "#333333",
                            "hover": "#178acc",
                            "info": "#04519b",
                            "primary": "#2fa4e7",
                            "secondary": "#e9ecef",
                            "success": "#73a839",
                            "tertiary": "#343a40",
                            "warning": "#dd5600",
                          },
                          "font": Object {
                            "size": Object {
                              "default": "1.8rem",
                              "h1": "3.8rem",
                              "h2": "3.1rem",
                              "h3": "2.6rem",
                              "h4": "2.3rem",
                              "h5": "2.2rem",
                              "h6": "2.1rem",
                            },
                            "weight": Object {
                              "default": 100,
                            },
                          },
                        }
                      }
                      type="radio"
                      value="value"
                    >
                      <input
                        aria-invalid={false}
                        checked={false}
                        className="sc-EHOje WAkUz"
                        id="id-0"
                        name="name"
                        onChange={[Function]}
                        type="radio"
                        value="value"
                      />
                    </styled.input>
                    <Label
                      hasError={false}
                      htmlFor="id-0"
                      type="radio"
                    >
                      <styled.label
                        hasError={false}
                        htmlFor="id-0"
                        theme={
                          Object {
                            "border": Object {
                              "radius": Object {
                                "edge": "2px",
                                "round": "100px",
                              },
                              "size": "2px",
                            },
                            "breakpoint": Object {
                              "lg": "992px",
                              "md": "768px",
                              "sm": "576px",
                              "xl": "1200px",
                              "xs": "0px",
                            },
                            "color": Object {
                              "background": "#ffffff",
                              "border": "#2fa4e7",
                              "checked": "#2fa4e7",
                              "danger": "#c71c22",
                              "default": "#2fa4e7",
                              "disabled": "#acacac",
                              "error": "#c71c22",
                              "focus": "#54b4eb",
                              "font": "#333333",
                              "hover": "#178acc",
                              "info": "#04519b",
                              "primary": "#2fa4e7",
                              "secondary": "#e9ecef",
                              "success": "#73a839",
                              "tertiary": "#343a40",
                              "warning": "#dd5600",
                            },
                            "font": Object {
                              "size": Object {
                                "default": "1.8rem",
                                "h1": "3.8rem",
                                "h2": "3.1rem",
                                "h3": "2.6rem",
                                "h4": "2.3rem",
                                "h5": "2.2rem",
                                "h6": "2.1rem",
                              },
                              "weight": Object {
                                "default": 100,
                              },
                            },
                          }
                        }
                        type="radio"
                      >
                        <label
                          className="sc-ifAKCX dfQieX"
                          htmlFor="id-0"
                          type="radio"
                        >
                          label
                        </label>
                      </styled.label>
                    </Label>
                  </div>
                </styled.div>
                <styled.div
                  key="1"
                >
                  <div
                    className="sc-bZQynM daLRsN"
                  >
                    <styled.input
                      aria-invalid={false}
                      checked={false}
                      hasError={false}
                      id="id-1"
                      innerRef={[Function]}
                      name="name"
                      onChange={[Function]}
                      theme={
                        Object {
                          "border": Object {
                            "radius": Object {
                              "edge": "2px",
                              "round": "100px",
                            },
                            "size": "2px",
                          },
                          "breakpoint": Object {
                            "lg": "992px",
                            "md": "768px",
                            "sm": "576px",
                            "xl": "1200px",
                            "xs": "0px",
                          },
                          "color": Object {
                            "background": "#ffffff",
                            "border": "#2fa4e7",
                            "checked": "#2fa4e7",
                            "danger": "#c71c22",
                            "default": "#2fa4e7",
                            "disabled": "#acacac",
                            "error": "#c71c22",
                            "focus": "#54b4eb",
                            "font": "#333333",
                            "hover": "#178acc",
                            "info": "#04519b",
                            "primary": "#2fa4e7",
                            "secondary": "#e9ecef",
                            "success": "#73a839",
                            "tertiary": "#343a40",
                            "warning": "#dd5600",
                          },
                          "font": Object {
                            "size": Object {
                              "default": "1.8rem",
                              "h1": "3.8rem",
                              "h2": "3.1rem",
                              "h3": "2.6rem",
                              "h4": "2.3rem",
                              "h5": "2.2rem",
                              "h6": "2.1rem",
                            },
                            "weight": Object {
                              "default": 100,
                            },
                          },
                        }
                      }
                      type="radio"
                      value="1"
                    >
                      <input
                        aria-invalid={false}
                        checked={false}
                        className="sc-EHOje WAkUz"
                        id="id-1"
                        name="name"
                        onChange={[Function]}
                        type="radio"
                        value="1"
                      />
                    </styled.input>
                    <Label
                      hasError={false}
                      htmlFor="id-1"
                      type="radio"
                    >
                      <styled.label
                        hasError={false}
                        htmlFor="id-1"
                        theme={
                          Object {
                            "border": Object {
                              "radius": Object {
                                "edge": "2px",
                                "round": "100px",
                              },
                              "size": "2px",
                            },
                            "breakpoint": Object {
                              "lg": "992px",
                              "md": "768px",
                              "sm": "576px",
                              "xl": "1200px",
                              "xs": "0px",
                            },
                            "color": Object {
                              "background": "#ffffff",
                              "border": "#2fa4e7",
                              "checked": "#2fa4e7",
                              "danger": "#c71c22",
                              "default": "#2fa4e7",
                              "disabled": "#acacac",
                              "error": "#c71c22",
                              "focus": "#54b4eb",
                              "font": "#333333",
                              "hover": "#178acc",
                              "info": "#04519b",
                              "primary": "#2fa4e7",
                              "secondary": "#e9ecef",
                              "success": "#73a839",
                              "tertiary": "#343a40",
                              "warning": "#dd5600",
                            },
                            "font": Object {
                              "size": Object {
                                "default": "1.8rem",
                                "h1": "3.8rem",
                                "h2": "3.1rem",
                                "h3": "2.6rem",
                                "h4": "2.3rem",
                                "h5": "2.2rem",
                                "h6": "2.1rem",
                              },
                              "weight": Object {
                                "default": 100,
                              },
                            },
                          }
                        }
                        type="radio"
                      >
                        <label
                          className="sc-ifAKCX dfQieX"
                          htmlFor="id-1"
                          type="radio"
                        >
                          one
                        </label>
                      </styled.label>
                    </Label>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </fieldset>
        </styled.fieldset>
      </Fieldset>
      <Error
        id="id-error"
      >
        <styled.div
          id="id-error-error"
          theme={
            Object {
              "border": Object {
                "radius": Object {
                  "edge": "2px",
                  "round": "100px",
                },
                "size": "2px",
              },
              "breakpoint": Object {
                "lg": "992px",
                "md": "768px",
                "sm": "576px",
                "xl": "1200px",
                "xs": "0px",
              },
              "color": Object {
                "background": "#ffffff",
                "border": "#2fa4e7",
                "checked": "#2fa4e7",
                "danger": "#c71c22",
                "default": "#2fa4e7",
                "disabled": "#acacac",
                "error": "#c71c22",
                "focus": "#54b4eb",
                "font": "#333333",
                "hover": "#178acc",
                "info": "#04519b",
                "primary": "#2fa4e7",
                "secondary": "#e9ecef",
                "success": "#73a839",
                "tertiary": "#343a40",
                "warning": "#dd5600",
              },
              "font": Object {
                "size": Object {
                  "default": "1.8rem",
                  "h1": "3.8rem",
                  "h2": "3.1rem",
                  "h3": "2.6rem",
                  "h4": "2.3rem",
                  "h5": "2.2rem",
                  "h6": "2.1rem",
                },
                "weight": Object {
                  "default": 100,
                },
              },
            }
          }
        >
          <div
            className="sc-htpNat hYJuoM"
            id="id-error-error"
          />
        </styled.div>
      </Error>
    </div>
  </styled.div>
</InputRadioGroup>
`;

exports[`InputRadioGroup snapshot disabled 1`] = `
<InputRadioGroup
  disabled={true}
  id="id"
  name="name"
  options={
    Array [
      Object {
        "label": "label",
        "value": "value",
      },
      Object {
        "label": "one",
        "value": "1",
      },
    ]
  }
>
  <styled.div>
    <div
      className="sc-htoDjs gQgvQJ"
    >
      <Fieldset
        aria-describedby="id-error"
        id="id-fieldset"
      >
        <styled.fieldset
          id="id-fieldset"
        >
          <fieldset
            className="sc-bdVaJa bDWFJH"
            id="id-fieldset"
          >
            <styled.div
              alignment="horizontal"
              theme={
                Object {
                  "border": Object {
                    "radius": Object {
                      "edge": "2px",
                      "round": "100px",
                    },
                    "size": "2px",
                  },
                  "breakpoint": Object {
                    "lg": "992px",
                    "md": "768px",
                    "sm": "576px",
                    "xl": "1200px",
                    "xs": "0px",
                  },
                  "color": Object {
                    "background": "#ffffff",
                    "border": "#2fa4e7",
                    "checked": "#2fa4e7",
                    "danger": "#c71c22",
                    "default": "#2fa4e7",
                    "disabled": "#acacac",
                    "error": "#c71c22",
                    "focus": "#54b4eb",
                    "font": "#333333",
                    "hover": "#178acc",
                    "info": "#04519b",
                    "primary": "#2fa4e7",
                    "secondary": "#e9ecef",
                    "success": "#73a839",
                    "tertiary": "#343a40",
                    "warning": "#dd5600",
                  },
                  "font": Object {
                    "size": Object {
                      "default": "1.8rem",
                      "h1": "3.8rem",
                      "h2": "3.1rem",
                      "h3": "2.6rem",
                      "h4": "2.3rem",
                      "h5": "2.2rem",
                      "h6": "2.1rem",
                    },
                    "weight": Object {
                      "default": 100,
                    },
                  },
                }
              }
            >
              <div
                className="sc-dnqmqq kdnsFs"
              >
                <styled.div
                  key="0"
                >
                  <div
                    className="sc-bZQynM daLRsN"
                  >
                    <styled.input
                      aria-invalid={false}
                      checked={false}
                      disabled={true}
                      hasError={false}
                      id="id-0"
                      innerRef={[Function]}
                      name="name"
                      onChange={[Function]}
                      theme={
                        Object {
                          "border": Object {
                            "radius": Object {
                              "edge": "2px",
                              "round": "100px",
                            },
                            "size": "2px",
                          },
                          "breakpoint": Object {
                            "lg": "992px",
                            "md": "768px",
                            "sm": "576px",
                            "xl": "1200px",
                            "xs": "0px",
                          },
                          "color": Object {
                            "background": "#ffffff",
                            "border": "#2fa4e7",
                            "checked": "#2fa4e7",
                            "danger": "#c71c22",
                            "default": "#2fa4e7",
                            "disabled": "#acacac",
                            "error": "#c71c22",
                            "focus": "#54b4eb",
                            "font": "#333333",
                            "hover": "#178acc",
                            "info": "#04519b",
                            "primary": "#2fa4e7",
                            "secondary": "#e9ecef",
                            "success": "#73a839",
                            "tertiary": "#343a40",
                            "warning": "#dd5600",
                          },
                          "font": Object {
                            "size": Object {
                              "default": "1.8rem",
                              "h1": "3.8rem",
                              "h2": "3.1rem",
                              "h3": "2.6rem",
                              "h4": "2.3rem",
                              "h5": "2.2rem",
                              "h6": "2.1rem",
                            },
                            "weight": Object {
                              "default": 100,
                            },
                          },
                        }
                      }
                      type="radio"
                      value="value"
                    >
                      <input
                        aria-invalid={false}
                        checked={false}
                        className="sc-EHOje WAkUz"
                        disabled={true}
                        id="id-0"
                        name="name"
                        onChange={[Function]}
                        type="radio"
                        value="value"
                      />
                    </styled.input>
                    <Label
                      hasError={false}
                      htmlFor="id-0"
                      type="radio"
                    >
                      <styled.label
                        hasError={false}
                        htmlFor="id-0"
                        theme={
                          Object {
                            "border": Object {
                              "radius": Object {
                                "edge": "2px",
                                "round": "100px",
                              },
                              "size": "2px",
                            },
                            "breakpoint": Object {
                              "lg": "992px",
                              "md": "768px",
                              "sm": "576px",
                              "xl": "1200px",
                              "xs": "0px",
                            },
                            "color": Object {
                              "background": "#ffffff",
                              "border": "#2fa4e7",
                              "checked": "#2fa4e7",
                              "danger": "#c71c22",
                              "default": "#2fa4e7",
                              "disabled": "#acacac",
                              "error": "#c71c22",
                              "focus": "#54b4eb",
                              "font": "#333333",
                              "hover": "#178acc",
                              "info": "#04519b",
                              "primary": "#2fa4e7",
                              "secondary": "#e9ecef",
                              "success": "#73a839",
                              "tertiary": "#343a40",
                              "warning": "#dd5600",
                            },
                            "font": Object {
                              "size": Object {
                                "default": "1.8rem",
                                "h1": "3.8rem",
                                "h2": "3.1rem",
                                "h3": "2.6rem",
                                "h4": "2.3rem",
                                "h5": "2.2rem",
                                "h6": "2.1rem",
                              },
                              "weight": Object {
                                "default": 100,
                              },
                            },
                          }
                        }
                        type="radio"
                      >
                        <label
                          className="sc-ifAKCX dfQieX"
                          htmlFor="id-0"
                          type="radio"
                        >
                          label
                        </label>
                      </styled.label>
                    </Label>
                  </div>
                </styled.div>
                <styled.div
                  key="1"
                >
                  <div
                    className="sc-bZQynM daLRsN"
                  >
                    <styled.input
                      aria-invalid={false}
                      checked={false}
                      disabled={true}
                      hasError={false}
                      id="id-1"
                      innerRef={[Function]}
                      name="name"
                      onChange={[Function]}
                      theme={
                        Object {
                          "border": Object {
                            "radius": Object {
                              "edge": "2px",
                              "round": "100px",
                            },
                            "size": "2px",
                          },
                          "breakpoint": Object {
                            "lg": "992px",
                            "md": "768px",
                            "sm": "576px",
                            "xl": "1200px",
                            "xs": "0px",
                          },
                          "color": Object {
                            "background": "#ffffff",
                            "border": "#2fa4e7",
                            "checked": "#2fa4e7",
                            "danger": "#c71c22",
                            "default": "#2fa4e7",
                            "disabled": "#acacac",
                            "error": "#c71c22",
                            "focus": "#54b4eb",
                            "font": "#333333",
                            "hover": "#178acc",
                            "info": "#04519b",
                            "primary": "#2fa4e7",
                            "secondary": "#e9ecef",
                            "success": "#73a839",
                            "tertiary": "#343a40",
                            "warning": "#dd5600",
                          },
                          "font": Object {
                            "size": Object {
                              "default": "1.8rem",
                              "h1": "3.8rem",
                              "h2": "3.1rem",
                              "h3": "2.6rem",
                              "h4": "2.3rem",
                              "h5": "2.2rem",
                              "h6": "2.1rem",
                            },
                            "weight": Object {
                              "default": 100,
                            },
                          },
                        }
                      }
                      type="radio"
                      value="1"
                    >
                      <input
                        aria-invalid={false}
                        checked={false}
                        className="sc-EHOje WAkUz"
                        disabled={true}
                        id="id-1"
                        name="name"
                        onChange={[Function]}
                        type="radio"
                        value="1"
                      />
                    </styled.input>
                    <Label
                      hasError={false}
                      htmlFor="id-1"
                      type="radio"
                    >
                      <styled.label
                        hasError={false}
                        htmlFor="id-1"
                        theme={
                          Object {
                            "border": Object {
                              "radius": Object {
                                "edge": "2px",
                                "round": "100px",
                              },
                              "size": "2px",
                            },
                            "breakpoint": Object {
                              "lg": "992px",
                              "md": "768px",
                              "sm": "576px",
                              "xl": "1200px",
                              "xs": "0px",
                            },
                            "color": Object {
                              "background": "#ffffff",
                              "border": "#2fa4e7",
                              "checked": "#2fa4e7",
                              "danger": "#c71c22",
                              "default": "#2fa4e7",
                              "disabled": "#acacac",
                              "error": "#c71c22",
                              "focus": "#54b4eb",
                              "font": "#333333",
                              "hover": "#178acc",
                              "info": "#04519b",
                              "primary": "#2fa4e7",
                              "secondary": "#e9ecef",
                              "success": "#73a839",
                              "tertiary": "#343a40",
                              "warning": "#dd5600",
                            },
                            "font": Object {
                              "size": Object {
                                "default": "1.8rem",
                                "h1": "3.8rem",
                                "h2": "3.1rem",
                                "h3": "2.6rem",
                                "h4": "2.3rem",
                                "h5": "2.2rem",
                                "h6": "2.1rem",
                              },
                              "weight": Object {
                                "default": 100,
                              },
                            },
                          }
                        }
                        type="radio"
                      >
                        <label
                          className="sc-ifAKCX dfQieX"
                          htmlFor="id-1"
                          type="radio"
                        >
                          one
                        </label>
                      </styled.label>
                    </Label>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </fieldset>
        </styled.fieldset>
      </Fieldset>
      <Error
        id="id-error"
      >
        <styled.div
          id="id-error-error"
          theme={
            Object {
              "border": Object {
                "radius": Object {
                  "edge": "2px",
                  "round": "100px",
                },
                "size": "2px",
              },
              "breakpoint": Object {
                "lg": "992px",
                "md": "768px",
                "sm": "576px",
                "xl": "1200px",
                "xs": "0px",
              },
              "color": Object {
                "background": "#ffffff",
                "border": "#2fa4e7",
                "checked": "#2fa4e7",
                "danger": "#c71c22",
                "default": "#2fa4e7",
                "disabled": "#acacac",
                "error": "#c71c22",
                "focus": "#54b4eb",
                "font": "#333333",
                "hover": "#178acc",
                "info": "#04519b",
                "primary": "#2fa4e7",
                "secondary": "#e9ecef",
                "success": "#73a839",
                "tertiary": "#343a40",
                "warning": "#dd5600",
              },
              "font": Object {
                "size": Object {
                  "default": "1.8rem",
                  "h1": "3.8rem",
                  "h2": "3.1rem",
                  "h3": "2.6rem",
                  "h4": "2.3rem",
                  "h5": "2.2rem",
                  "h6": "2.1rem",
                },
                "weight": Object {
                  "default": 100,
                },
              },
            }
          }
        >
          <div
            className="sc-htpNat hYJuoM"
            id="id-error-error"
          />
        </styled.div>
      </Error>
    </div>
  </styled.div>
</InputRadioGroup>
`;

exports[`InputRadioGroup snapshot error 1`] = `
<InputRadioGroup
  errorMessage="Error"
  id="id"
  name="name"
  options={
    Array [
      Object {
        "label": "label",
        "value": "value",
      },
      Object {
        "label": "one",
        "value": "1",
      },
    ]
  }
>
  <styled.div>
    <div
      className="sc-htoDjs gQgvQJ"
    >
      <Fieldset
        aria-describedby="id-error"
        id="id-fieldset"
      >
        <styled.fieldset
          id="id-fieldset"
        >
          <fieldset
            className="sc-bdVaJa bDWFJH"
            id="id-fieldset"
          >
            <styled.div
              alignment="horizontal"
              theme={
                Object {
                  "border": Object {
                    "radius": Object {
                      "edge": "2px",
                      "round": "100px",
                    },
                    "size": "2px",
                  },
                  "breakpoint": Object {
                    "lg": "992px",
                    "md": "768px",
                    "sm": "576px",
                    "xl": "1200px",
                    "xs": "0px",
                  },
                  "color": Object {
                    "background": "#ffffff",
                    "border": "#2fa4e7",
                    "checked": "#2fa4e7",
                    "danger": "#c71c22",
                    "default": "#2fa4e7",
                    "disabled": "#acacac",
                    "error": "#c71c22",
                    "focus": "#54b4eb",
                    "font": "#333333",
                    "hover": "#178acc",
                    "info": "#04519b",
                    "primary": "#2fa4e7",
                    "secondary": "#e9ecef",
                    "success": "#73a839",
                    "tertiary": "#343a40",
                    "warning": "#dd5600",
                  },
                  "font": Object {
                    "size": Object {
                      "default": "1.8rem",
                      "h1": "3.8rem",
                      "h2": "3.1rem",
                      "h3": "2.6rem",
                      "h4": "2.3rem",
                      "h5": "2.2rem",
                      "h6": "2.1rem",
                    },
                    "weight": Object {
                      "default": 100,
                    },
                  },
                }
              }
            >
              <div
                className="sc-dnqmqq kdnsFs"
              >
                <styled.div
                  key="0"
                >
                  <div
                    className="sc-bZQynM daLRsN"
                  >
                    <styled.input
                      aria-invalid={true}
                      checked={false}
                      hasError={true}
                      id="id-0"
                      innerRef={[Function]}
                      name="name"
                      onChange={[Function]}
                      theme={
                        Object {
                          "border": Object {
                            "radius": Object {
                              "edge": "2px",
                              "round": "100px",
                            },
                            "size": "2px",
                          },
                          "breakpoint": Object {
                            "lg": "992px",
                            "md": "768px",
                            "sm": "576px",
                            "xl": "1200px",
                            "xs": "0px",
                          },
                          "color": Object {
                            "background": "#ffffff",
                            "border": "#2fa4e7",
                            "checked": "#2fa4e7",
                            "danger": "#c71c22",
                            "default": "#2fa4e7",
                            "disabled": "#acacac",
                            "error": "#c71c22",
                            "focus": "#54b4eb",
                            "font": "#333333",
                            "hover": "#178acc",
                            "info": "#04519b",
                            "primary": "#2fa4e7",
                            "secondary": "#e9ecef",
                            "success": "#73a839",
                            "tertiary": "#343a40",
                            "warning": "#dd5600",
                          },
                          "font": Object {
                            "size": Object {
                              "default": "1.8rem",
                              "h1": "3.8rem",
                              "h2": "3.1rem",
                              "h3": "2.6rem",
                              "h4": "2.3rem",
                              "h5": "2.2rem",
                              "h6": "2.1rem",
                            },
                            "weight": Object {
                              "default": 100,
                            },
                          },
                        }
                      }
                      type="radio"
                      value="value"
                    >
                      <input
                        aria-invalid={true}
                        checked={false}
                        className="sc-EHOje cRfBHc"
                        id="id-0"
                        name="name"
                        onChange={[Function]}
                        type="radio"
                        value="value"
                      />
                    </styled.input>
                    <Label
                      hasError={true}
                      htmlFor="id-0"
                      type="radio"
                    >
                      <styled.label
                        hasError={true}
                        htmlFor="id-0"
                        theme={
                          Object {
                            "border": Object {
                              "radius": Object {
                                "edge": "2px",
                                "round": "100px",
                              },
                              "size": "2px",
                            },
                            "breakpoint": Object {
                              "lg": "992px",
                              "md": "768px",
                              "sm": "576px",
                              "xl": "1200px",
                              "xs": "0px",
                            },
                            "color": Object {
                              "background": "#ffffff",
                              "border": "#2fa4e7",
                              "checked": "#2fa4e7",
                              "danger": "#c71c22",
                              "default": "#2fa4e7",
                              "disabled": "#acacac",
                              "error": "#c71c22",
                              "focus": "#54b4eb",
                              "font": "#333333",
                              "hover": "#178acc",
                              "info": "#04519b",
                              "primary": "#2fa4e7",
                              "secondary": "#e9ecef",
                              "success": "#73a839",
                              "tertiary": "#343a40",
                              "warning": "#dd5600",
                            },
                            "font": Object {
                              "size": Object {
                                "default": "1.8rem",
                                "h1": "3.8rem",
                                "h2": "3.1rem",
                                "h3": "2.6rem",
                                "h4": "2.3rem",
                                "h5": "2.2rem",
                                "h6": "2.1rem",
                              },
                              "weight": Object {
                                "default": 100,
                              },
                            },
                          }
                        }
                        type="radio"
                      >
                        <label
                          className="sc-ifAKCX jEkptv"
                          htmlFor="id-0"
                          type="radio"
                        >
                          label
                        </label>
                      </styled.label>
                    </Label>
                  </div>
                </styled.div>
                <styled.div
                  key="1"
                >
                  <div
                    className="sc-bZQynM daLRsN"
                  >
                    <styled.input
                      aria-invalid={true}
                      checked={false}
                      hasError={true}
                      id="id-1"
                      innerRef={[Function]}
                      name="name"
                      onChange={[Function]}
                      theme={
                        Object {
                          "border": Object {
                            "radius": Object {
                              "edge": "2px",
                              "round": "100px",
                            },
                            "size": "2px",
                          },
                          "breakpoint": Object {
                            "lg": "992px",
                            "md": "768px",
                            "sm": "576px",
                            "xl": "1200px",
                            "xs": "0px",
                          },
                          "color": Object {
                            "background": "#ffffff",
                            "border": "#2fa4e7",
                            "checked": "#2fa4e7",
                            "danger": "#c71c22",
                            "default": "#2fa4e7",
                            "disabled": "#acacac",
                            "error": "#c71c22",
                            "focus": "#54b4eb",
                            "font": "#333333",
                            "hover": "#178acc",
                            "info": "#04519b",
                            "primary": "#2fa4e7",
                            "secondary": "#e9ecef",
                            "success": "#73a839",
                            "tertiary": "#343a40",
                            "warning": "#dd5600",
                          },
                          "font": Object {
                            "size": Object {
                              "default": "1.8rem",
                              "h1": "3.8rem",
                              "h2": "3.1rem",
                              "h3": "2.6rem",
                              "h4": "2.3rem",
                              "h5": "2.2rem",
                              "h6": "2.1rem",
                            },
                            "weight": Object {
                              "default": 100,
                            },
                          },
                        }
                      }
                      type="radio"
                      value="1"
                    >
                      <input
                        aria-invalid={true}
                        checked={false}
                        className="sc-EHOje cRfBHc"
                        id="id-1"
                        name="name"
                        onChange={[Function]}
                        type="radio"
                        value="1"
                      />
                    </styled.input>
                    <Label
                      hasError={true}
                      htmlFor="id-1"
                      type="radio"
                    >
                      <styled.label
                        hasError={true}
                        htmlFor="id-1"
                        theme={
                          Object {
                            "border": Object {
                              "radius": Object {
                                "edge": "2px",
                                "round": "100px",
                              },
                              "size": "2px",
                            },
                            "breakpoint": Object {
                              "lg": "992px",
                              "md": "768px",
                              "sm": "576px",
                              "xl": "1200px",
                              "xs": "0px",
                            },
                            "color": Object {
                              "background": "#ffffff",
                              "border": "#2fa4e7",
                              "checked": "#2fa4e7",
                              "danger": "#c71c22",
                              "default": "#2fa4e7",
                              "disabled": "#acacac",
                              "error": "#c71c22",
                              "focus": "#54b4eb",
                              "font": "#333333",
                              "hover": "#178acc",
                              "info": "#04519b",
                              "primary": "#2fa4e7",
                              "secondary": "#e9ecef",
                              "success": "#73a839",
                              "tertiary": "#343a40",
                              "warning": "#dd5600",
                            },
                            "font": Object {
                              "size": Object {
                                "default": "1.8rem",
                                "h1": "3.8rem",
                                "h2": "3.1rem",
                                "h3": "2.6rem",
                                "h4": "2.3rem",
                                "h5": "2.2rem",
                                "h6": "2.1rem",
                              },
                              "weight": Object {
                                "default": 100,
                              },
                            },
                          }
                        }
                        type="radio"
                      >
                        <label
                          className="sc-ifAKCX jEkptv"
                          htmlFor="id-1"
                          type="radio"
                        >
                          one
                        </label>
                      </styled.label>
                    </Label>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </fieldset>
        </styled.fieldset>
      </Fieldset>
      <Error
        id="id-error"
      >
        <styled.div
          id="id-error-error"
          theme={
            Object {
              "border": Object {
                "radius": Object {
                  "edge": "2px",
                  "round": "100px",
                },
                "size": "2px",
              },
              "breakpoint": Object {
                "lg": "992px",
                "md": "768px",
                "sm": "576px",
                "xl": "1200px",
                "xs": "0px",
              },
              "color": Object {
                "background": "#ffffff",
                "border": "#2fa4e7",
                "checked": "#2fa4e7",
                "danger": "#c71c22",
                "default": "#2fa4e7",
                "disabled": "#acacac",
                "error": "#c71c22",
                "focus": "#54b4eb",
                "font": "#333333",
                "hover": "#178acc",
                "info": "#04519b",
                "primary": "#2fa4e7",
                "secondary": "#e9ecef",
                "success": "#73a839",
                "tertiary": "#343a40",
                "warning": "#dd5600",
              },
              "font": Object {
                "size": Object {
                  "default": "1.8rem",
                  "h1": "3.8rem",
                  "h2": "3.1rem",
                  "h3": "2.6rem",
                  "h4": "2.3rem",
                  "h5": "2.2rem",
                  "h6": "2.1rem",
                },
                "weight": Object {
                  "default": 100,
                },
              },
            }
          }
        >
          <div
            className="sc-htpNat hYJuoM"
            id="id-error-error"
          >
            Error
          </div>
        </styled.div>
      </Error>
    </div>
  </styled.div>
</InputRadioGroup>
`;
